# mcp-fw

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: policy.yaml
issues/: 01-fix-version-mismatch.md  02-nail-validate-effects.md  03-mut-effect-support.md  04-tool-cache-refresh.md  05-resource-filtering.md  06-policy-hot-reload.md  07-error-handling-backend.md  08-static-type-checking.md  09-structured-logging.md  10-env-secret-handling.md  11-nail-infer-effects-logging.md  12-nail-get-tool-effects.md  13-nail-delegation-check.md  14-sse-streamable-http.md  15-multi-server-proxy.md  16-ask-mode.md  README.md
scripts/: create-github-issues.sh
src/mcp_fw/: __main__.py  cli.py  filtering.py  policy.py  proxy.py  runtime_state.py
src/mcp_fw/menubar/: __init__.py  __main__.py  app.py  claude_desktop.py  config_locator.py  i18n.py  log_viewer.py  policy_manager.py  process_monitor.py
tests/: test_claude_desktop.py  test_cli.py  test_config_locator.py  test_filtering.py  test_menubar_i18n.py  test_policy.py  test_process_monitor.py  test_proxy.py  test_runtime_state.py
