[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-fw"
version = "0.1.0"
description = "MCP Firewall Proxy — policy-based tool access control using NAIL effects"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.26.0",
    "nail-lang>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-fw = "mcp_fw.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
