[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-fw"
version = "0.2.0"
description = "MCP Firewall Proxy — policy-based tool access control using NAIL effects"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{ name = "zyom45" }]
keywords = ["mcp", "firewall", "proxy", "nail", "effects", "tool-access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.26.0",
    "nail-lang>=0.9.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/zyom45/mcp-fw"
Repository = "https://github.com/zyom45/mcp-fw"
Issues = "https://github.com/zyom45/mcp-fw/issues"

[project.scripts]
mcp-fw = "mcp_fw.cli:main"
mcp-fw-menubar = "mcp_fw.menubar:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
menubar = ["rumps>=0.4.0", "pyobjc-framework-Cocoa>=10.0", "ruamel.yaml>=0.18"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
